# started-forex-trading-python-algorithm

./: README.md  pyproject.toml  setup.cfg
.github/workflow-templates/: started-forex-trading-python-algorithm.properties.json  started-forex-trading-python-algorithm.yml
.github/workflows/: create-demo-issue.yml  create-demo-issue3.yml  create-demo-via-gh.yml  create-issue-via-gh.yml  create-issues-across-prods-and-levels.yml  create-issues-across-prods.yml  create-issues-from-context.yml  create-repo-issue.yml  create-repo-issue3.yml  docker-image.yml  get-info.yml  repo-info.yml
backend/: demo.py  main.py
backend/chapter7/: technical_analysis.py
backend/chapter8/: live_bar_chart.py  live_tick_chart.py
src/forex_trading/common/: ConfigConst.py  DeviceDataManager.py  IDataMessageListener.py  OneOnly.py  directory_search.py  nmea_states_2.py
src/forex_trading/data/: BaseIotData.py  SystemPerformanceData.py
src/forex_trading/datasets/: EURUSD_1_Tick.csv  csv_tick_reader.py  txt_tick_reader.py
src/forex_trading/fin_info_exchange/: FIX Dictionary.py  FixAdapterManager.py  TA_indicators_using_sliding_window.py  add_sample.py  live_tick_chart.py  universal_data_connector.py  websocket_connect.py
src/forex_trading/system/: BaseSystemUtilTask.py  SystemCpuUtilTask.py  SystemDiskUtilTask.py  SystemMemUtilTask.py  SystemPerformanceManager.py
test/fin_info_exchange/: test_FixAdapterManager.py
test/system/: test_devicedatamanager.py
