[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py38', 'py310']

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s:%(name)s:%(levelname)s:%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
