[metadata]
name = forex-trading
version = 0.0.1
url = https://github.com/chanelcolgate/started-forex-trading-python-algorithm
author = chanelcolgate
author_email = "chanelcolgate" <thanhdatbkdn14@gmail.com>
description = trading application
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude = 
    test*
